Added validations for the song model

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,6 @@
 body {
+    margin: 0px;
+    padding: 0px;
     background-color: #F0F0F0;
     font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
 }
@@ -14,6 +16,5 @@ a:visited {
 #app {
     background-color: white;
     margin-top: 0;
-    height: 100%;
-    width: 100%;
+
 }
