--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,5 +1,6 @@
 #navbar {
-    display: flex;
+    position: fixed;
+    display: inline-flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
@@ -23,11 +24,13 @@
     display: inline-block;
     border-right: 1px solid black;
     font-size:  14px;
-
 }
 
-#nav-left a:active {
+#nav-left a:active, #nav-right a:active {
     background-color: black;
+    color: white;
+}
+#nav-left a:hover, #nav-right a:hover {
     color: white;
 }
 
@@ -43,7 +46,7 @@
     background-position: center;
     background-size: cover;
     border: none;
-    background-image: image();
+    background-image: url('../images/logo-circle.png');
 }
 
 #nav-right {
@@ -51,12 +54,76 @@
     align-items: center;
 }
 
-.droplink {
-    display: none;
-    list-style: none;
+#nav-right .nav-session {
+    margin: 0;
+    line-height: 20px;
+    height: 20px;
+    padding: 2px 11px 2px 10px;
+    color: white;
+    font-size: 13px;
+    margin-left: 15px;
+    border-radius: 3px;
+    text-align: center;
+    align-items: center;
 }
 
-.droplink.show {
+#login {
+    border: 1px solid rgb(187, 187, 187);
+}
+
+#signup {
+    background-color: #FF5500;
+}
+#nav-right a:link, a:visited {
+    color: rgb(187, 187, 187);
+
+}
+
+#right-btn, #drop-trigger {
+    width: auto;
+    color: rgb(187, 187, 187);
+    padding: 10px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size:  14px;
+}
+
+#right-btn:hover, #drop-trigger:hover {
+    color: white;
+}
+
+#drop-trigger {
+    background-color: transparent;
+    border: none;
+    font-size: 14px;
+    height: 45px;
+}
+
+#drop-trigger:focus, .left-btn:focus {
+    background-color: #111111;
+    color: white;
+    border: none;
+}
+
+.dropdown-list, #logout {
+    display: none;
+    list-style: none;
+    width: 90px;
+    height: 25px;
+    font-size: 12px;
+    text-align: left;
+    background-color: #111111;
+    border: none;
+}
+
+.droplink #logout {
+    color: rgb(153, 153, 153);
+    text-decoration: none;
+
+}
+
+.dropdown-list.show {
     display: block;
 }
 
@@ -71,14 +138,18 @@
   cursor: pointer;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .dropdown-nav > ul {
-  position: absolute;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  text-align: left;
-  background-color: rgb(141, 184, 154);
-  margin: 20px;
+    margin-top: 0px;
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    background-color: #111111;
+    right: -5px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 40px;
 }
