Removed some unused code that was causing bugs

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,3 +18,10 @@ a:visited {
     margin-top: 0;
 
 }
+
+#app-content {
+    display: flexbox;
+    height: 950px;
+    width: 900px;
+    border: 1px solid red;
+}
