--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -1,13 +1,28 @@
-.session-container {
+.modal-screen {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 5;
+    background: rgba(242, 242, 242, 0.8);
     display: flex;
     justify-content: center;
+    // align-items: center;
 }
 
+.modal-content {
+    margin-top: 70px;
+
+}
+
+
 #session-form {
+    background-color: white;
     height: 504px;
     width: 398px;
     padding: 30px;
-    border: 1px solid rgb(229,229,229);
+    // border: 1px solid rgb(229,229,229);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -17,9 +32,11 @@
     color: #3388DD;
 }
 
-#session-form p {
+.session-paragraph p {
     font-size: 12px;
     color: rgb(153, 153, 153);
+    width: 366px;
+
 }
 
 #help {
@@ -32,7 +49,8 @@
 .email-div {
     display: flex;
     flex-direction: column;
-    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
 
 .hidden {
