--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -43,6 +43,7 @@
     color: white;
     display: inline-block;
     border: none;
+    background-image: image_url('logo-circle.png');
 }
 
 #nav-right {
