--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,12 +18,29 @@ a:visited {
     text-decoration: none;
 }
 
+#app-container {
+    height: auto;
+}
 #app {
     background-color: white;
     margin-top: 0;
-    height: 1000px;
+    height: 100%;
     width: 972px;
     margin-left: auto;
     margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+#app-content {
+    margin-top: 45px;
+    height: 500px;
+    width: 100%;
+    padding: 50px;
+}
+
+#app-footer {
+    justify-self: baseline;
 }
 
