Restructured the redux cycle for creating an account

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -1,5 +1,5 @@
-// .landing-div {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-evenly;
-// }
+.landing-div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
