--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,7 +18,7 @@ a:visited {
     text-decoration: none;
 }
 
-#app {
+#app-container {
     background-color: white;
     margin-top: 0;
     height: 100%;
