--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,8 +16,7 @@
     width: 100vw;
     margin-left: calc(-1 * ((100vw - 100%) / 2)); // tip from SW4 on stack overflow
     background-color: #333;
-    position: sticky;
-    top: 0;
+    position: fixed;
 }
 
 .nav-left {
