Added app logo to the navbar

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -47,11 +47,15 @@
 #nav-logo {
     padding: 0;
     height: 45px;
-    width: 55px;
+    width: 90px;
     color: white;
     display: inline-block;
     border: none;
     background-image: url('logo-circle.png');
+    background-position: center;
+    background-size: 100px 95px;
+    background-repeat: no-repeat;
+    background-color: #FF5500;
 
 }
 
