--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -17,6 +17,7 @@
     margin-left: calc(-1 * ((100vw - 100%) / 2)); // tip from SW4 on stack overflow
     background-color: #333;
     position: fixed;
+    z-index: -2;
 }
 
 .nav-left {
