--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -133,7 +133,12 @@
     border: none;
     text-decoration: none;
     padding-left: 0px;
+    padding-top: 0px;
+    width: 100%;
+    height: 100%;
+    text-align: left;
 }
+
 
 .droplink.show {
     display: block;
@@ -142,6 +147,9 @@
     padding: 5px 7px 5px 12px;
 }
 
+.droplink:last-of-type {
+    padding-top: 0px;
+}
 .droplink a {
     color: rgb(153, 153, 153);
     text-decoration: none;
@@ -155,6 +163,7 @@
 .droplink:first-of-type {
     margin-top: 10px;
 }
+
 
 .dropdown-nav {
   width: 46px;
