Display logo on the navbar

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -52,7 +52,7 @@
     color: white;
     display: inline-block;
     border: none;
-    background-image: url('logo-circle.png');
+    background-image: url(asset_path('logo-circle.png'));
     background-position: center;
     background-size: 100px 95px;
     background-repeat: no-repeat;
