--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -2,7 +2,7 @@
     margin-top: 50px;
     border-top: 1px solid #F0F0F0;
     padding: 15px;
-    padding-bottom: 80px;
+    height: 105px;
 }
 
 #footer > ul {
