--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -7,4 +7,4 @@ $dark-grey: #333;
 $almost-blk: #111111;
 $mid-grey: rgb(187, 187, 187);
 $light-grey: rgb(153, 153, 153);
-$lighter-grey: #F0F0F0;
+$lighter-grey: #dedede;
