--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -26,9 +26,13 @@
     justify-content: center;
 }
 
+.hidden, .audio-upload.hidden {
+    display: none;
+}
+
 .cover-art {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     border: 1px solid green;
     margin-right: 20px;
 }
@@ -36,4 +40,19 @@
 .form-content {
     display: flex;
     flex-direction: column;
+}
+
+.audio-upload {
+    font-size: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+    height: 400px;
+    border: 1px solid red;
+}
+
+.form-buttons {
+    display: inline-block;
 }
