--- a/app/assets/stylesheets/song_form.scss
+++ b/app/assets/stylesheets/song_form.scss
@@ -1,58 +1,126 @@
 @import 'variables';
 
 #song-form-div {
-    display: flex;
-    justify-content: center;
+    @extend %flex-center;
     height: 600px;
-    border: 1px solid red;
-    align-items: center;
 }
 
 .song-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @extend %flex-center;
     flex-direction: column;
     height: 420px;
-    width: 720px;
+    width: 780px;
     padding: 20px 25px;
     border: 1px solid $lighter-grey;
     border-radius: 3px;
 }
 
 .song-basic-info {
-    display: flex;
+    @extend %flex-center;
     flex-direction: row;
-    justify-content: center;
 }
 
-.hidden, .audio-upload.hidden {
+.hidden, .audio-div.hidden {
     display: none;
 }
 
-.cover-art {
-    height: 250px;
-    width: 250px;
+.cover-div {
     border: 1px solid green;
-    margin-right: 20px;
+    margin-right: 40px;
+    display: flex;
+    justify-content: baseline;
 }
 
 .form-content {
     display: flex;
     flex-direction: column;
+    text-align: center;
+    width: 350px;
+    height: 320px;
 }
 
-.audio-upload {
-    font-size: 25px;
-    display: flex;
+.form-content label {
+    margin-bottom: 5px;
+    font-size: 12px;
+}
+
+.song-form-input {
+    margin-bottom: 15px;
+    height: 27px;
+    padding: 8px 7px;
+    line-height: 18px;
+    font-size: 20px;
+}
+
+.genre-option {
+    margin-bottom: 15px;
+    padding: 8px 7px;
+    height: 35px;
+}
+
+.description {
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+.audio-div {
+    @extend %flex-center;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    font-size: 25px;
     width: 700px;
     height: 400px;
-    border: 1px solid red;
 }
 
 .form-buttons {
     display: inline-block;
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.audio-upload {
+    @extend %flex-center;
+    margin-top: 10px;
+    width: 350px;
+    height: 40px;
+    cursor: pointer;
+    font-size: 20px;
+    color: white;
+    border-radius: 4px;
+    background-color: $sc-orange;
+}
+
+.cover-div {
+    height: 320px;
+    width: 320px;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 20px;
+}
+
+.cover-msg {
+    background-color: $lighter-grey;
+    border: 1px solid $mid-grey;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+.song-form-label {
+    text-align: left;
+}
+
+#title {
+    display: inline-flex;
+}
+
+#required {
+    color: red;
+}
+
+.form-footer {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    font-size: 12px;
 }
