--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -6,7 +6,7 @@ $sc-orange: #FF5500;
 $dark-grey: #333;
 $almost-blk: #111111;
 $mid-grey: rgb(187, 187, 187);
-$light-grey: rgb(153, 153, 153);
+$light-grey: #999999;
 $lighter-grey: #dedede;
 
 //extends
