--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,5 +16,14 @@ $lighter-grey: #dedede;
     align-items: center;
 }
 
+%flex-col {
+    display: flex;
+    flex-direction: column;
+}
+%flex-row {
+    display: flex;
+    flex-direction: row;
+}
+
 //misc 
 $border-rad: 4px;
