--- a/app/assets/stylesheets/audio_player.scss
+++ b/app/assets/stylesheets/audio_player.scss
@@ -1,12 +1,86 @@
+@import 'variables';
+
 .audio-popup {
-    border: 1px solid red;
-    display: flex;
+    position: fixed;
+    bottom: 0;
+    display: inline-flex;
+    background-color: #F0F0F0;
+    font-size: 12px;
+    justify-content: space-evenly;
+    border: 1px solid $grey;
+    border-bottom: none;
+    width: 100vw;
+    left: 0;
+
 }
 
-.audio {
+#audio {
     display: none
 }
 
-.show {
-    background-color: rebeccapurple;
+.song-details, .player-progress, .player-controls {
+    @extend %flex-row;
+    align-items: center;
+    padding: 7px 15px;
 }
+
+.audio-player-cover {
+    height: 30px;
+    width: 30px;
+    margin-right: 7px;
+}
+
+.player-basic-info {
+    @extend %flex-col;
+}
+
+#player-artist {
+    color: $mid-grey;
+}
+#player-title {
+    color: $grey;
+}
+
+.player-progress {
+    align-items: center;
+}
+
+#duration {
+    color: $grey;
+    
+}
+
+#time-elapsed {
+    color: $sc-orange
+}
+
+#progress-bar {
+    -webkit-appearance: none;
+    appearance: none;
+    background: $grey;
+    outline: none;
+    width: 600px;
+    height: 2px;
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+#progress-bar::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    height: 10px;
+    width: 10px;
+    border-radius: 50px;
+    background: $sc-orange;
+    cursor: pointer;
+}
+
+#progress-bar::-moz-range-thumb {
+    height: 10px;
+    width: 10px;
+    border-radius: 50px;
+    background: $sc-orange;
+    cursor: pointer;
+}
+
+
