--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -5,6 +5,7 @@ $font-stack: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Ver
 $sc-orange: #FF5500;
 $dark-grey: #333;
 $almost-blk: #111111;
+$grey: #797979;
 $mid-grey: rgb(187, 187, 187);
 $light-grey: #999999;
 $lighter-grey: #dedede;
