--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -48,7 +48,7 @@
     border-radius: $border-rad;
     padding: 10px 15px;
     margin: 15px 10px;
-    color: $lighter-grey;
+    color: white;
     background-color: $sc-orange;
 }
 
@@ -79,4 +79,53 @@
 .landing-cover img {
     height: 200px;
     width: 200px;
+}
+
+.landing-mobile-app {
+    height: 662px;
+    width: 100%;
+    width: 100%;
+    background-image: url(asset_path('landing-bottom.png'));
+    background-repeat: no-repeat;
+}
+
+.landing-closing {
+    @extend %flex-col;
+    justify-content: center;
+    align-items: center;
+}
+
+.landing-closing h1 {
+    font-size: 35px;
+    margin-bottom: 14px;
+}
+
+.landing-closing p {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.landing-btn-wht {
+    background-color: $sc-orange;
+    border: none;
+    line-height: 18px;
+    font-size: 18px;
+    border-radius: $border-rad;
+    padding: 10px 15px;
+    margin: 15px 10px;
+    color: black;
+    background-color: white;
+    border: 1px solid $light-grey;
+}
+
+.landing-signin {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#already-account {
+    font-size: 12px;
+    color: $light-grey;
+    margin-bottom: 0;
 }
