Reverted back to the way the nav and session form was setup before

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -78,11 +78,13 @@
     border-radius: 3px;
     text-align: center;
     align-items: center;
+    justify-content: center;
 }
 
-#login {
-    border: 1px solid #bbbbbb;
+#login.nav-session {
+    border: 1px solid $mid-grey;
     background-color: $light-grey;
+    padding-top: 2px;
 }
 
 #signup {
