--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -66,7 +66,7 @@
     justify-content: center;
 }
 
-.hidden {
+.hidden, .hide-modal {
     display: none;
 }
 
@@ -162,3 +162,4 @@
     width: 160px;
     height: 0.1px;
 }
+
