Add search functionality to the genre button on the song show banner

--- a/app/assets/stylesheets/song_banner.scss
+++ b/app/assets/stylesheets/song_banner.scss
@@ -1,9 +1,8 @@
 @import 'variables';
 
 .song-banner {
-    background-color: rgb(174, 174, 174);
+    background: rgb(174, 174, 174);
     background-blend-mode: multiply;
-    
 }
 
 .song-banner-backdrop {
