Remove colored borders used to help style

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -216,7 +216,7 @@
     width: 342px;
 }
 
-#search:focus {
+#search:focus, #search-long:focus {
     outline: none;
     background-color: white;
     color: #333;
