Fix link coloring on search index

--- a/app/assets/stylesheets/search_index.scss
+++ b/app/assets/stylesheets/search_index.scss
@@ -25,10 +25,12 @@
     margin-bottom: 8px;
 }
 
-.song-results > a {
+
+
+.song-results > li > a {
     color: black;
 }
 
-.song-results > a:visited {
+.song-results > li > a:visited {
     color: black;
 }
