--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Cloudsound</title>
+    <link rel="shortcut icon" href="https://cloud-sound-assets.s3-us-west-1.amazonaws.com/seeds/logo-no-text.png" type="image/x-icon">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
