Display the username of the user that wrote the comment as a link to their page

--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -71,6 +71,14 @@
     align-items: center;
 }
 
+.comment-header > a, .comment-header > a:visited {
+    color: $light-grey;
+}
+
+.comment-header > a:hover {
+    text-decoration: underline;
+}
+
 .comment-header {
     font-size: 13px;
     justify-content: space-between;
