--- a/app/assets/stylesheets/song_show.scss
+++ b/app/assets/stylesheets/song_show.scss
@@ -86,6 +86,7 @@
 
 .comment-index-header {
     font-size: 14px;
+    margin-top: 10px;
     padding-bottom: 8px;
     border-bottom: 1px solid $lighter-grey;
 }
@@ -111,21 +112,20 @@
     border-bottom: 1px solid $lighter-grey;
 }
 
-.artist-profile-pic {
-    height: 150px;
-    width: 150px;
-    border-radius: 100px;
-    margin-bottom: 15px;
-}
-
 .profile-pic {
     object-fit: cover;
     object-position: center;
-    height: 150px;
-    width: 150px;
+    height: 170px;
+    width: 170px;
     border-radius: 1000px;
+    margin-bottom: 10px;
 }
 
 .artist-info-name {
     font-weight: bold;
+    margin-bottom: 3px;
+}
+
+.artist-info-bio {
+    color: $light-grey;
 }
