--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -200,6 +200,8 @@
 }
 
 #search, #search-long {
+    -webkit-appearance: none;
+    
     margin: 5px 10px;
     width: 213px;
     height: 27px;
@@ -210,6 +212,10 @@
     padding: 7px 8px;
     background-color: #e1e1e1;
     color: rgb(153, 153, 153);
+}
+
+::-webkit-input-placeholder {
+    
 }
 
 #search-long {
