Create container and presentational components for user show

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -106,7 +106,7 @@
 
 #right-btn, #drop-trigger {
     width: auto;
-    color: rgb(187, 187, 187);
+    color: #bbbbbb;
     padding: 10px 12px;
     text-align: center;
     text-decoration: none;
@@ -214,9 +214,6 @@
     color: rgb(153, 153, 153);
 }
 
-::-webkit-input-placeholder {
-    
-}
 
 #search-long {
     width: 342px;
