Style user banner

--- a/app/assets/stylesheets/song_banner.scss
+++ b/app/assets/stylesheets/song_banner.scss
@@ -5,7 +5,7 @@
     background-blend-mode: multiply;
 }
 
-.song-banner-backdrop {
+.banner-backdrop {
     @extend %flex-row;
     justify-content: space-between;
     align-items: center;
