--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -36,3 +36,32 @@
 .banner-bio {
     color: $light-grey;
 }
+
+.user-song-index {
+    padding: 25px;
+}
+
+.user-song-index-header {
+    color: $dark-grey;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    border-bottom: 1px solid $lighter-grey;
+    padding-bottom: 10px;
+}
+
+.user-song {
+    @extend %flex-row;
+    margin-bottom: 35px;
+}
+
+.user-song-content {
+    @extend %flex-row;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.user-song-info {
+    @extend %flex-col;
+    margin-left: 20px;
+}
