Make the components more consistent with one another. Some colors and ordering were different between pages

--- a/app/assets/stylesheets/user_show.scss
+++ b/app/assets/stylesheets/user_show.scss
@@ -75,9 +75,13 @@
 }
 
 .user-song-title, .user-song-title:visited {
+    color: $grey;
+}
+
+.user-song-title:hover {
     color: $dark-grey;
 }
 
 .user-song-date {
-    color: $dark-grey;
+    color: $grey;
 }
